Add repo settings and remove highlights for Icehouse
We've deprecated per-release highlights and are now removing them.
We also now require repository-settings for deliverables. This adds
the one and removes the other.

Change-Id: I22fac9d5ebd68364d3035f32f8f3798d1cd072d4

--- a/deliverables/icehouse/ceilometer.yaml
+++ b/deliverables/icehouse/ceilometer.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/ceilometer
         hash: 737e89950b8acd7c517e526331c92514b4efc678
+repository-settings:
+  openstack/ceilometer: {}
