--- a/deliverables/icehouse/cinder.yaml
+++ b/deliverables/icehouse/cinder.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/cinder
         hash: bc0549e08b010edb863d409d80114aa78d317a61
+repository-settings:
+  openstack/cinder: {}
