--- a/deliverables/icehouse/glance.yaml
+++ b/deliverables/icehouse/glance.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/glance
         hash: 66aa3da3bd98015d0fba53afb8de5a542b92f96b
+repository-settings:
+  openstack/glance: {}
