--- a/deliverables/icehouse/heat.yaml
+++ b/deliverables/icehouse/heat.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/heat
         hash: eb22b015f5491e03e4a96bfa8c3b3d2d7f011ba0
+repository-settings:
+  openstack/heat: {}
