--- a/deliverables/icehouse/horizon.yaml
+++ b/deliverables/icehouse/horizon.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: 3f6e9b577aa3253a3114ff0eb7c49f83e45154ae
+repository-settings:
+  openstack/horizon: {}
