--- a/deliverables/icehouse/keystone.yaml
+++ b/deliverables/icehouse/keystone.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/keystone
         hash: b9c85c53012bce3130a0038b5aa0fa30db2cc7d7
+repository-settings:
+  openstack/keystone: {}
