--- a/deliverables/icehouse/neutron.yaml
+++ b/deliverables/icehouse/neutron.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/neutron
         hash: d786f55f27825ce5be0d338de3bc206e56fbd28d
+repository-settings:
+  openstack/neutron: {}
