--- a/deliverables/icehouse/nova.yaml
+++ b/deliverables/icehouse/nova.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 58ae4a6e3a3585e3ace914c695e537707c75673e
+repository-settings:
+  openstack/nova: {}
