--- a/deliverables/icehouse/openstack-doc-tools.yaml
+++ b/deliverables/icehouse/openstack-doc-tools.yaml
@@ -31,7 +31,7 @@ releases:
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 87f8c5e7f46ab7807d2db286b73aaf688a315129
-  - version: "0.7.1"
+  - version: 0.7.1
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 1763efc4a38c98fa59733f9c1e8dbc9245349c7e
@@ -39,11 +39,11 @@ releases:
     projects:
       - repo: openstack/openstack-doc-tools
         hash: b3b96eb65ccb1c4c7d6667958555b58a461b2586
-  - version: "0.8.1"
+  - version: 0.8.1
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 4604cbbcbb9053d2328dea8f11f8e4c42c699570
-  - version: "0.8.2"
+  - version: 0.8.2
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 15601d407c3d3527a97077f84cce71d6fd61d8b3
@@ -51,7 +51,9 @@ releases:
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 1083e40d21d4fda3647e2d2f90f47e70de5d7345
-  - version: '0.10'
+  - version: "0.10"
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 0efad094839eda475f82fae7e03391df29086418
+repository-settings:
+  openstack/openstack-doc-tools: {}
