--- a/deliverables/icehouse/oslo.messaging.yaml
+++ b/deliverables/icehouse/oslo.messaging.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/oslo.messaging
         hash: afe191c32b73f218ec6538a9a1ef62e743fe528a
+repository-settings:
+  openstack/oslo.messaging: {}
