--- a/deliverables/icehouse/python-barbicanclient.yaml
+++ b/deliverables/icehouse/python-barbicanclient.yaml
@@ -16,3 +16,5 @@ releases:
     projects:
       - repo: openstack/python-barbicanclient
         hash: 45ffca9951e3c53b3495eaf06a89fe609b057a77
+repository-settings:
+  openstack/python-barbicanclient: {}
