--- a/deliverables/icehouse/python-cinderclient.yaml
+++ b/deliverables/icehouse/python-cinderclient.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/python-cinderclient
         hash: e31e057cccd4e79bcb989ddbfd1a47c5d801d51a
+repository-settings:
+  openstack/python-cinderclient: {}
