--- a/deliverables/icehouse/python-cliff.yaml
+++ b/deliverables/icehouse/python-cliff.yaml
@@ -22,3 +22,5 @@ releases:
     projects:
       - repo: openstack/cliff
         hash: 9dcd1934d5e92513b2f80fb786072f437f6e79c3
+repository-settings:
+  openstack/cliff: {}
