--- a/deliverables/icehouse/python-designateclient.yaml
+++ b/deliverables/icehouse/python-designateclient.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/python-designateclient
         hash: 6025437b65c50d52d3685d0a94eb33082dac9cc2
+repository-settings:
+  openstack/python-designateclient: {}
