--- a/deliverables/icehouse/python-glanceclient.yaml
+++ b/deliverables/icehouse/python-glanceclient.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/python-glanceclient
         hash: c22b88d9b1a7542d4ace31b792d3a24613e8d0f1
+repository-settings:
+  openstack/python-glanceclient: {}
