--- a/deliverables/icehouse/python-heatclient.yaml
+++ b/deliverables/icehouse/python-heatclient.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/python-heatclient
         hash: 2efd2e5837ea39949a1de5b6ef5060930304953d
+repository-settings:
+  openstack/python-heatclient: {}
