--- a/deliverables/icehouse/python-ironicclient.yaml
+++ b/deliverables/icehouse/python-ironicclient.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/python-ironicclient
         hash: 8da97f3d5cb1daa2216052bd0ad5c87b9f96b647
+repository-settings:
+  openstack/python-ironicclient: {}
