--- a/deliverables/icehouse/python-keystoneclient.yaml
+++ b/deliverables/icehouse/python-keystoneclient.yaml
@@ -28,3 +28,5 @@ releases:
     projects:
       - repo: openstack/python-keystoneclient
         hash: 6a6c8d760b12d8f74721ce59c03987ab65ec613a
+repository-settings:
+  openstack/python-keystoneclient: {}
