--- a/deliverables/icehouse/python-neutronclient.yaml
+++ b/deliverables/icehouse/python-neutronclient.yaml
@@ -16,3 +16,5 @@ releases:
     projects:
       - repo: openstack/python-neutronclient
         hash: d5558265cc97af3fc48eb71a99816a04cd17a0d8
+repository-settings:
+  openstack/python-neutronclient: {}
