--- a/deliverables/icehouse/python-novaclient.yaml
+++ b/deliverables/icehouse/python-novaclient.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/python-novaclient
         hash: 3393cb9ff828bf49722617f60f437b1941acd2c7
+repository-settings:
+  openstack/python-novaclient: {}
