--- a/deliverables/icehouse/python-openstackclient.yaml
+++ b/deliverables/icehouse/python-openstackclient.yaml
@@ -12,3 +12,5 @@ releases:
     projects:
       - repo: openstack/python-openstackclient
         hash: b7f673cb81f1a6539739dc6d12eaef7455bf63fd
+repository-settings:
+  openstack/python-openstackclient: {}
