--- a/deliverables/icehouse/python-saharaclient.yaml
+++ b/deliverables/icehouse/python-saharaclient.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/python-saharaclient
         hash: 95e5cd807b2259d087c9ccf4acbeb594e8bc8433
+repository-settings:
+  openstack/python-saharaclient: {}
