--- a/deliverables/icehouse/python-swiftclient.yaml
+++ b/deliverables/icehouse/python-swiftclient.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/python-swiftclient
         hash: 52893e3ce548af98d6b5d30cdda37e7f3da7122f
+repository-settings:
+  openstack/python-swiftclient: {}
