--- a/deliverables/icehouse/python-troveclient.yaml
+++ b/deliverables/icehouse/python-troveclient.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/python-troveclient
         hash: 4d2b11adc95edc9c405db0d938531295bf71a4a4
+repository-settings:
+  openstack/python-troveclient: {}
