--- a/deliverables/icehouse/python-zaqarclient.yaml
+++ b/deliverables/icehouse/python-zaqarclient.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/python-zaqarclient
         hash: ee528254981d3d92cd85a22f6c79940434405c28
+repository-settings:
+  openstack/python-zaqarclient: {}
