--- a/deliverables/icehouse/swift.yaml
+++ b/deliverables/icehouse/swift.yaml
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/swift
         hash: 1f0058e61e9094cdf9484e982b7f662660bed87e
+repository-settings:
+  openstack/swift: {}
