--- a/deliverables/icehouse/taskflow.yaml
+++ b/deliverables/icehouse/taskflow.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/taskflow
         hash: 7b54ac40de0d5d383721a7a09fa0e3e376fa10ba
+repository-settings:
+  openstack/taskflow: {}
