--- a/deliverables/icehouse/trove.yaml
+++ b/deliverables/icehouse/trove.yaml
@@ -24,3 +24,5 @@ releases:
     projects:
       - repo: openstack/trove
         hash: c38256841e28ac002c2d027420b04e069da203a7
+repository-settings:
+  openstack/trove: {}
