Add repo settings and remove highlights for Havana
We've deprecated per-release highlights and are now removing them.
We also now require repository-settings for deliverables. This adds
the one and removes the other.

Change-Id: Ie711ea0cae10481f90f8124162881ddaa3b564c0

--- a/deliverables/havana/glance.yaml
+++ b/deliverables/havana/glance.yaml
@@ -8,19 +8,21 @@ releases:
     projects:
       - repo: openstack/glance
         hash: 42cfa8cc9dc3241103a6764ae1e3e58cfef2a763
-  - version: "2013.2.1"
+  - version: 2013.2.1
     projects:
       - repo: openstack/glance
         hash: 949cda02d33846ab7c8468fed7fd93e0d09d6017
-  - version: "2013.2.2"
+  - version: 2013.2.2
     projects:
       - repo: openstack/glance
         hash: edcbdf9fa1639ba437e94547edad91b2c8fb8bcf
-  - version: "2013.2.3"
+  - version: 2013.2.3
     projects:
       - repo: openstack/glance
         hash: 3d17ba013a61d3d721d9591ff7d555d250c924c5
-  - version: "2013.2.4"
+  - version: 2013.2.4
     projects:
       - repo: openstack/glance
         hash: ab8ee36191eb5c8fe58420cca21380d3df752e2a
+repository-settings:
+  openstack/glance: {}
