--- a/deliverables/havana/heat.yaml
+++ b/deliverables/havana/heat.yaml
@@ -8,19 +8,21 @@ releases:
     projects:
       - repo: openstack/heat
         hash: fa85221f9e470410aa6c4b5fff8cef6c5b186afd
-  - version: "2013.2.1"
+  - version: 2013.2.1
     projects:
       - repo: openstack/heat
         hash: 8283db76a441e25ae00315e1ebdbbeda90e08bf9
-  - version: "2013.2.2"
+  - version: 2013.2.2
     projects:
       - repo: openstack/heat
         hash: ab5d961efd062662544218f36ae64277d39763fd
-  - version: "2013.2.3"
+  - version: 2013.2.3
     projects:
       - repo: openstack/heat
         hash: 527009d0e4a73481459a5246e898390fb432d612
-  - version: "2013.2.4"
+  - version: 2013.2.4
     projects:
       - repo: openstack/heat
         hash: 278f01354a1558d67ff29a91af4a3001e2a793f5
+repository-settings:
+  openstack/heat: {}
