--- a/deliverables/havana/neutron.yaml
+++ b/deliverables/havana/neutron.yaml
@@ -8,19 +8,21 @@ releases:
     projects:
       - repo: openstack/neutron
         hash: 9808cac073777ae375074121f9eab15403f1a856
-  - version: "2013.2.1"
+  - version: 2013.2.1
     projects:
       - repo: openstack/neutron
         hash: c78394474be796bbf2633d0c5c8704ddffbeb487
-  - version: "2013.2.2"
+  - version: 2013.2.2
     projects:
       - repo: openstack/neutron
         hash: 15a912b1ca3c24ba8851b8b77d6de8027e120d78
-  - version: "2013.2.3"
+  - version: 2013.2.3
     projects:
       - repo: openstack/neutron
         hash: 8cb9d895675f2a89c6b741da4b594f416fbeee5a
-  - version: "2013.2.4"
+  - version: 2013.2.4
     projects:
       - repo: openstack/neutron
         hash: 501e498c60eac6133cea3ee400fa3d74c5d89502
+repository-settings:
+  openstack/neutron: {}
