--- a/deliverables/havana/python-ceilometerclient.yaml
+++ b/deliverables/havana/python-ceilometerclient.yaml
@@ -4,27 +4,27 @@ team: Telemetry
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: "1.0.1"
+  - version: 1.0.1
     projects:
       - repo: openstack/python-ceilometerclient
         hash: 52e3f6ffe188a82a67fdd573bb03ab1d9b0b95b4
-  - version: "1.0.2"
+  - version: 1.0.2
     projects:
       - repo: openstack/python-ceilometerclient
         hash: 04cc271da208069e921da252554e839de46442ed
-  - version: "1.0.3"
+  - version: 1.0.3
     projects:
       - repo: openstack/python-ceilometerclient
         hash: 9e330726ce6409088f7cbf50f4c76622c2f1732f
-  - version: "1.0.4"
+  - version: 1.0.4
     projects:
       - repo: openstack/python-ceilometerclient
         hash: b386b09defc0bb18686ac6762da1168a3668191a
-  - version: "1.0.5"
+  - version: 1.0.5
     projects:
       - repo: openstack/python-ceilometerclient
         hash: 2610d6c144e0d81cd94a6f18eb899443ce7d64fb
-  - version: "1.0.6"
+  - version: 1.0.6
     projects:
       - repo: openstack/python-ceilometerclient
         hash: c3283ec1e861f29a53c59c1a09f2a1bc21a713e4
