Add repo settings and remove highlights for Grizzly
We've deprecated per-release highlights and are now removing them.
We also now require repository-settings for deliverables. This adds
the one and removes the other.

Change-Id: I6266e7bdd9d7876e03ec95a167408b80cca59210

--- a/deliverables/grizzly/glance.yaml
+++ b/deliverables/grizzly/glance.yaml
@@ -8,19 +8,21 @@ releases:
     projects:
       - repo: openstack/glance
         hash: b225586a2a5910bfe33666927397edc3ca110ca3
-  - version: "2013.1.2"
+  - version: 2013.1.2
     projects:
       - repo: openstack/glance
         hash: a799a98b73baa1d3d7901edf55e49118bfb8ba74
-  - version: "2013.1.3"
+  - version: 2013.1.3
     projects:
       - repo: openstack/glance
         hash: a5dda27f3b797abe9acac4eceb091c3d48cfc0e7
-  - version: "2013.1.4"
+  - version: 2013.1.4
     projects:
       - repo: openstack/glance
         hash: b72b2cb4e46050bbfdb7a9047d494894050f273c
-  - version: "2013.1.5"
+  - version: 2013.1.5
     projects:
       - repo: openstack/glance
         hash: 10a6be70477ec67d3c453a939e82af0fdf786beb
+repository-settings:
+  openstack/glance: {}
