--- a/deliverables/grizzly/nova.yaml
+++ b/deliverables/grizzly/nova.yaml
@@ -8,23 +8,25 @@ releases:
     projects:
       - repo: openstack/nova
         hash: d91686ace3ae1bf22948b9a0a4bf62918585a029
-  - version: "2013.1.1"
+  - version: 2013.1.1
     projects:
       - repo: openstack/nova
         hash: be94dd25bf64df3151013c08ed925d68fcf85190
-  - version: "2013.1.2"
+  - version: 2013.1.2
     projects:
       - repo: openstack/nova
         hash: 8c136a8ee4733d8d3af61406fc9eeccb4e9b7a68
-  - version: "2013.1.3"
+  - version: 2013.1.3
     projects:
       - repo: openstack/nova
         hash: 89c7ee409564d3909dbe8e1fb171ae7273508339
-  - version: "2013.1.4"
+  - version: 2013.1.4
     projects:
       - repo: openstack/nova
         hash: 0409a098de02407e8229183ee55f11252c0a3cf4
-  - version: "2013.1.5"
+  - version: 2013.1.5
     projects:
       - repo: openstack/nova
         hash: 64f22b8059b218c06634c0b54f9b39f7a77493ed
+repository-settings:
+  openstack/nova: {}
