--- a/deliverables/grizzly/python-ceilometerclient.yaml
+++ b/deliverables/grizzly/python-ceilometerclient.yaml
@@ -4,7 +4,7 @@ team: Telemetry
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: "1.0.0"
+  - version: 1.0.0
     projects:
       - repo: openstack/python-ceilometerclient
         hash: e30d70074f278f58457d9d2b278815b5ccb39a63
