Add repo settings and remove highlights for Folsom
We've deprecated per-release highlights and are now removing them.
We also now require repository-settings for deliverables. This adds
the one and removes the other.

Change-Id: I060e3598f067e674af2eba3f61acbbdaabcc3ae3

--- a/deliverables/folsom/horizon.yaml
+++ b/deliverables/folsom/horizon.yaml
@@ -8,15 +8,17 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: cee6b626d372c8d420b439038a3fe0580d8fcc89
-  - version: "2012.2.1"
+  - version: 2012.2.1
     projects:
       - repo: openstack/horizon
         hash: 9647138fdb2d1d6b2f2b303239d94ebc7407edc0
-  - version: "2012.2.3"
+  - version: 2012.2.3
     projects:
       - repo: openstack/horizon
         hash: 675799742a8bd4e4ad9191b2f331dfc63066cc2c
-  - version: "2012.2.4"
+  - version: 2012.2.4
     projects:
       - repo: openstack/horizon
         hash: 307a4924ff1277ce03094d7e280ed19322d6d5e8
+repository-settings:
+  openstack/horizon: {}
