--- a/deliverables/folsom/neutron.yaml
+++ b/deliverables/folsom/neutron.yaml
@@ -8,15 +8,17 @@ releases:
     projects:
       - repo: openstack/neutron
         hash: a9b17b66b77c2bfeef52e11a8eff45f5d11d906f
-  - version: "2012.2.1"
+  - version: 2012.2.1
     projects:
       - repo: openstack/neutron
         hash: 3a6cc2f6dce82b6554618418a9424588a047ffc6
-  - version: "2012.2.3"
+  - version: 2012.2.3
     projects:
       - repo: openstack/neutron
         hash: d3d385a45b9d522a541fe97314635756f7d0547f
-  - version: "2012.2.4"
+  - version: 2012.2.4
     projects:
       - repo: openstack/neutron
         hash: d6a2c4b08c662e01a3e3d19e56b863fe2f793e32
+repository-settings:
+  openstack/neutron: {}
