--- a/deliverables/folsom/python-cinderclient.yaml
+++ b/deliverables/folsom/python-cinderclient.yaml
@@ -16,7 +16,9 @@ releases:
     projects:
       - repo: openstack/python-cinderclient
         hash: 8e48619f96eb4d51c0f05b66ddf73b1338c99f3c
-  - version: "1.0.0"
+  - version: 1.0.0
     projects:
       - repo: openstack/python-cinderclient
         hash: 2e6be694c17d505bf52e339bccf6848776493ffe
+repository-settings:
+  openstack/python-cinderclient: {}
