--- a/deliverables/folsom/python-openstackclient.yaml
+++ b/deliverables/folsom/python-openstackclient.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/python-openstackclient
         hash: 7b768ae5536c0f5d328bd37cdcbd5a485808b957
+repository-settings:
+  openstack/python-openstackclient: {}
