--- a/deliverables/folsom/python-swiftclient.yaml
+++ b/deliverables/folsom/python-swiftclient.yaml
@@ -8,15 +8,17 @@ releases:
     projects:
       - repo: openstack/python-swiftclient
         hash: c9dfd144d11b6371da95469e8fcff7315d1c0c4e
-  - version: "1.1.0"
+  - version: 1.1.0
     projects:
       - repo: openstack/python-swiftclient
         hash: c9dfd144d11b6371da95469e8fcff7315d1c0c4e
-  - version: "1.1.1"
+  - version: 1.1.1
     projects:
       - repo: openstack/python-swiftclient
         hash: a325aad8a491a497272a7b165cbaa7577ce27654
-  - version: "1.2.0"
+  - version: 1.2.0
     projects:
       - repo: openstack/python-swiftclient
         hash: 68d1550f15a6ec6f51973af2e27f3a6943b6305f
+repository-settings:
+  openstack/python-swiftclient: {}
