--- a/deliverables/folsom/python-cliff.yaml
+++ b/deliverables/folsom/python-cliff.yaml
@@ -22,7 +22,7 @@ releases:
     projects:
       - repo: openstack/cliff
         hash: f3efefbc542f557d0b7f3f33fecb10a5e7a318b1
-  - version: "0.5.1"
+  - version: 0.5.1
     projects:
       - repo: openstack/cliff
         hash: dfe456fa6b6eadda8ba77fc74ad043e2b3f9d050
@@ -42,11 +42,11 @@ releases:
     projects:
       - repo: openstack/cliff
         hash: fb515c455ed6b7d286a942045d2b07d0ddb5593c
-  - version: "1.1.1"
+  - version: 1.1.1
     projects:
       - repo: openstack/cliff
         hash: b934b9916d3b985dc52e014ab2ece01daff24956
-  - version: "1.1.2"
+  - version: 1.1.2
     projects:
       - repo: openstack/cliff
         hash: 9e778376f76a91277a063e851fa1c1ab1737480c
@@ -54,7 +54,9 @@ releases:
     projects:
       - repo: openstack/cliff
         hash: 56f377661e23a894571875db2472e26b8761797f
-  - version: "1.2.1"
+  - version: 1.2.1
     projects:
       - repo: openstack/cliff
         hash: a987d403b7ae57c2934d67789f6eaf9324f4383b
+repository-settings:
+  openstack/cliff: {}
