--- a/deliverables/folsom/python-neutronclient.yaml
+++ b/deliverables/folsom/python-neutronclient.yaml
@@ -4,11 +4,11 @@ team: neutron
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: "0.1.0"
+  - version: 0.1.0
     projects:
       - repo: openstack/python-neutronclient
         hash: 50c46f61d1a76b5429c20ad61203afedc7c508bb
-  - version: "0.1.1"
+  - version: 0.1.1
     projects:
       - repo: openstack/python-neutronclient
         hash: d955740671000b2b915c8c6717d12a5e52f3b89e
@@ -20,3 +20,5 @@ releases:
     projects:
       - repo: openstack/python-neutronclient
         hash: bc7ba5e19d4e9039146ca37f77a0b232522cddc8
+repository-settings:
+  openstack/python-neutronclient: {}
