Add repo settings and remove highlights for Essex
We've deprecated per-release highlights and are now removing them.
We also now require repository-settings for deliverables. This adds
the one and removes the other.

Change-Id: I8c67823b27e347e49750050e129b07554801308e

--- a/deliverables/essex/keystone.yaml
+++ b/deliverables/essex/keystone.yaml
@@ -8,15 +8,17 @@ releases:
     projects:
       - repo: openstack/keystone
         hash: 7d08d12cea96910145f05499ba7d124603d7c4f6
-  - version: "2012.1.1"
+  - version: 2012.1.1
     projects:
       - repo: openstack/keystone
         hash: 29e74e73a6e51cffc0371b32354558391826a4aa
-  - version: "2012.1.2"
+  - version: 2012.1.2
     projects:
       - repo: openstack/keystone
         hash: afc37aeb10638807c9839fcc6f403b34029662a5
-  - version: "2012.1.3"
+  - version: 2012.1.3
     projects:
       - repo: openstack/keystone
         hash: 0e1f05e7a851f5fb72742e4d3e4978d76fe23b55
+repository-settings:
+  openstack/keystone: {}
