--- a/deliverables/essex/python-keystoneclient.yaml
+++ b/deliverables/essex/python-keystoneclient.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/python-keystoneclient
         hash: be30e463b08aace10e0e6d595f88f3aa44bb2a14
+repository-settings:
+  openstack/python-keystoneclient: {}
