--- a/deliverables/essex/python-novaclient.yaml
+++ b/deliverables/essex/python-novaclient.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/python-novaclient
         hash: 45fb6b6de89eaec642ecbf755af45fd55f8224d4
+repository-settings:
+  openstack/python-novaclient: {}
