panko 2.0.3 (ocata-eol)
Change-Id: I1f56e167476881df51ac6d2d1a19913ce4d5242a

--- a/deliverables/ocata/panko.yaml
+++ b/deliverables/ocata/panko.yaml
@@ -20,5 +20,9 @@ releases:
     projects:
       - repo: openstack/panko
         hash: efacfce94c52c91b17677188af55cd1c97d0088d
+  - version: 2.0.3
+    projects:
+      - repo: openstack/panko
+        hash: 7ef01c41dc3b61f8658632535204f6b7233f7701
 repository-settings:
   openstack/panko: {}
