--- a/deliverables/diablo/glance.yaml
+++ b/deliverables/diablo/glance.yaml
@@ -8,7 +8,9 @@ releases:
     projects:
       - repo: openstack/glance
         hash: 84e5d7fa0d38e6831570384db3cb1d6bd35b42b4
-  - version: "2011.3.1"
+  - version: 2011.3.1
     projects:
       - repo: openstack/glance
         hash: ffcd0ca83b6793d7f4f3f5bcbd02c31ca71e6da7
+repository-settings:
+  openstack/glance: {}
