--- a/deliverables/diablo/nova.yaml
+++ b/deliverables/diablo/nova.yaml
@@ -8,7 +8,9 @@ releases:
     projects:
       - repo: openstack/nova
         hash: a8e8d26393ac379f28db20a639d1711551106897
-  - version: "2011.3.1"
+  - version: 2011.3.1
     projects:
       - repo: openstack/nova
         hash: 2210b0796bf0b905ee5956a0b526b07eaae86709
+repository-settings:
+  openstack/nova: {}
