Add repo settings and remove highlights for Cactus
We've deprecated per-release highlights and are now removing them.
We also now require repository-settings for deliverables. This adds
the one and removes the other.

Change-Id: If4c1e749cbf1bd56b16891f4558e3187afd66345

--- a/deliverables/cactus/glance.yaml
+++ b/deliverables/cactus/glance.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/glance
         hash: 1975f1693380bae370245fbbf1eb6dbd409dcc72
+repository-settings:
+  openstack/glance: {}
