--- a/deliverables/cactus/nova.yaml
+++ b/deliverables/cactus/nova.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 8d304410250ddb33d2b2140456096816e0d62410
+repository-settings:
+  openstack/nova: {}
