Add repo settings and remove highlights for Bexar
We've deprecated per-release highlights and are now removing them.
We also now require repository-settings for deliverables. This adds
the one and removes the other.

Change-Id: I82142f39b60828fedab0b7061cd655953a1cc5c2

--- a/deliverables/bexar/glance.yaml
+++ b/deliverables/bexar/glance.yaml
@@ -4,7 +4,9 @@ team: glance
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: "0.1.7"
+  - version: 0.1.7
     projects:
       - repo: openstack/glance
         hash: c9d3211caa2f7b0532300f6bcfafe736cf5b1481
+repository-settings:
+  openstack/glance: {}
