--- a/deliverables/bexar/nova.yaml
+++ b/deliverables/bexar/nova.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 75e052e2c0bb7f470b959ea1a6168a6c5cddd8fd
+repository-settings:
+  openstack/nova: {}
