Add repo settings and remove highlights for Austin
We've deprecated per-release highlights and are now removing them.
We also now require repository-settings for deliverables. This adds
the one and removes the other.

Change-Id: Id892d0dfecf922876459c687c2943e86701b4cb6

--- a/deliverables/austin/nova.yaml
+++ b/deliverables/austin/nova.yaml
@@ -8,3 +8,5 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 685e2a1b4b359c1f7e8ec72817c2c420f2b26a18
+repository-settings:
+  openstack/nova: {}
